@@ -5,11 +5,11 @@ Requires at least: 2.2
 Tested up to: 2.7.1
 Stable tag: scorerender-0-3-0
 
-Renders inline sheet music fragments in post, pages and comments.
+Renders inline sheet music fragments in excerpts, posts, pages and comments.
 
 == Description ==
 
-ScoreRender is a Wordpress plugin for rendering sheet music fragments into images.  It supports converting fragments in posts, pages and (optionally) comments.  Currently it supports 5 music notations: ABC, Guido, Lilypond, Mup and Philip's Music Writer.
+ScoreRender is a Wordpress plugin for rendering sheet music fragments into images.  It supports converting fragments in excerpts, posts, pages and (optionally) comments.  Currently it supports 5 music notations: ABC, Guido, Lilypond, Mup and Philip's Music Writer.
 
 ScoreRender started its life from Chris Lamb’s FigureRender plugin, which is a Wordpress plugin for rendering LaTeX and Lilypond music fragments into images. Its maintainership changed later. While continue enhancing FigureRender, all LaTeX related functionalities are submitted to [LatexRender](http://sixthform.info/steve/wordpress/), thus preserving this plugin for music rendering only and the rename.
 
