@@ -3,10 +3,10 @@
 /**
  * ScoreRender documentation
  * @package ScoreRender
- * @version 0.2.50
+ * @version 0.3
  * @author Abel Cheung <abelcheung at gmail dot com>
  * @copyright Copyright (C) 2006 Chris Lamb <chris at chris-lamb dot co dot uk>
- * @copyright Copyright (C) 2007, 08 Abel Cheung
+ * @copyright Copyright (C) 2007-09 Abel Cheung
  * @license http://opensource.org/licenses/gpl-license.php GNU Public License
  */
 
