@@ -1,3 +1,8 @@
+2009-05-09  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender*.php:
+	- Update copyright and version.
+
 === ScoreRender 0.3.0 ===
 2009-04-30  Abel Cheung  <abelcheung@gmail.com>
 
